--- a/stats_rethinking_ch03.ipynb
+++ b/stats_rethinking_ch03.ipynb
@@ -7,6 +7,9 @@
    "source": [
     "The purpose of this notebook is to learn the Bayesian code from the [Statistical Rethinking book](https://xcelab.net/rm/statistical-rethinking/) using Python. I will use the R `rethinking` package as a point of comparison.\n",
     "\n",
+    "\n",
+    "# FIX YAML FILE\n",
+    "\n",
     "This is for Chapter 3 which covers linear modeling."
    ]
   },
@@ -1957,8 +1960,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "scientific-teddy",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-02-10T22:24:29.378077Z",
+     "start_time": "2021-02-10T22:24:28.393504Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# packages in environment at /Users/blacar/opt/anaconda3/envs/stats_rethinking:\r\n",
+      "#\r\n",
+      "# Name                    Version                   Build  Channel\r\n",
+      "appdirs                   1.4.4                    pypi_0    pypi\r\n",
+      "appnope                   0.1.2                    pypi_0    pypi\r\n",
+      "argon2-cffi               20.1.0                   pypi_0    pypi\r\n",
+      "arviz                     0.11.1                   pypi_0    pypi\r\n",
+      "async-generator           1.10                     pypi_0    pypi\r\n",
+      "attrs                     20.3.0                   pypi_0    pypi\r\n",
+      "backcall                  0.2.0                    pypi_0    pypi\r\n",
+      "black                     20.8b1                   pypi_0    pypi\r\n",
+      "bleach                    3.3.0                    pypi_0    pypi\r\n",
+      "ca-certificates           2021.1.19            hecd8cb5_0  \r\n",
+      "certifi                   2020.12.5        py38hecd8cb5_0  \r\n",
+      "cffi                      1.14.4                   pypi_0    pypi\r\n",
+      "cftime                    1.4.1                    pypi_0    pypi\r\n",
+      "click                     7.1.2                    pypi_0    pypi\r\n",
+      "cycler                    0.10.0                   pypi_0    pypi\r\n",
+      "decorator                 4.4.2                    pypi_0    pypi\r\n",
+      "defusedxml                0.6.0                    pypi_0    pypi\r\n",
+      "dill                      0.3.3                    pypi_0    pypi\r\n",
+      "entrypoints               0.3                      pypi_0    pypi\r\n",
+      "fastprogress              1.0.0                    pypi_0    pypi\r\n",
+      "filelock                  3.0.12                   pypi_0    pypi\r\n",
+      "intel-openmp              2021.1.2                 pypi_0    pypi\r\n",
+      "ipykernel                 5.4.3                    pypi_0    pypi\r\n",
+      "ipython                   7.20.0                   pypi_0    pypi\r\n",
+      "ipython-genutils          0.2.0                    pypi_0    pypi\r\n",
+      "jedi                      0.18.0                   pypi_0    pypi\r\n",
+      "jinja2                    2.11.3                   pypi_0    pypi\r\n",
+      "jsonschema                3.2.0                    pypi_0    pypi\r\n",
+      "jupyter-client            6.1.11                   pypi_0    pypi\r\n",
+      "jupyter-contrib-core      0.3.3                    pypi_0    pypi\r\n",
+      "jupyter-contrib-nbextensions 0.5.1                    pypi_0    pypi\r\n",
+      "jupyter-core              4.7.1                    pypi_0    pypi\r\n",
+      "jupyter-highlight-selected-word 0.2.0                    pypi_0    pypi\r\n",
+      "jupyter-latex-envs        1.4.6                    pypi_0    pypi\r\n",
+      "jupyter-nbextensions-configurator 0.4.1                    pypi_0    pypi\r\n",
+      "jupyterlab-pygments       0.1.2                    pypi_0    pypi\r\n",
+      "kiwisolver                1.3.1                    pypi_0    pypi\r\n",
+      "libcxx                    11.0.1               habf9029_0    conda-forge\r\n",
+      "libffi                    3.3                  hb1e8313_2  \r\n",
+      "lxml                      4.6.2                    pypi_0    pypi\r\n",
+      "markupsafe                1.1.1                    pypi_0    pypi\r\n",
+      "matplotlib                3.3.4                    pypi_0    pypi\r\n",
+      "mistune                   0.8.4                    pypi_0    pypi\r\n",
+      "mkl                       2021.1.1                 pypi_0    pypi\r\n",
+      "mkl-service               2.3.0            py38h9ed2024_0  \r\n",
+      "mypy-extensions           0.4.3                    pypi_0    pypi\r\n",
+      "nb-black                  1.0.7                    pypi_0    pypi\r\n",
+      "nbclient                  0.5.1                    pypi_0    pypi\r\n",
+      "nbconvert                 6.0.7                    pypi_0    pypi\r\n",
+      "nbformat                  5.1.2                    pypi_0    pypi\r\n",
+      "ncurses                   6.2                  h0a44026_1  \r\n",
+      "nest-asyncio              1.5.1                    pypi_0    pypi\r\n",
+      "netcdf4                   1.5.5.1                  pypi_0    pypi\r\n",
+      "notebook                  6.2.0                    pypi_0    pypi\r\n",
+      "numpy                     1.20.1                   pypi_0    pypi\r\n",
+      "openssl                   1.1.1i               h9ed2024_0  \r\n",
+      "packaging                 20.9                     pypi_0    pypi\r\n",
+      "pandas                    1.2.1                    pypi_0    pypi\r\n",
+      "pandocfilters             1.4.3                    pypi_0    pypi\r\n",
+      "parso                     0.8.1                    pypi_0    pypi\r\n",
+      "pathspec                  0.8.1                    pypi_0    pypi\r\n",
+      "patsy                     0.5.1                    pypi_0    pypi\r\n",
+      "pexpect                   4.8.0                    pypi_0    pypi\r\n",
+      "pickleshare               0.7.5                    pypi_0    pypi\r\n",
+      "pillow                    8.1.0                    pypi_0    pypi\r\n",
+      "pip                       20.2.2           py38hecd8cb5_0  \r\n",
+      "prometheus-client         0.9.0                    pypi_0    pypi\r\n",
+      "prompt-toolkit            3.0.14                   pypi_0    pypi\r\n",
+      "ptyprocess                0.7.0                    pypi_0    pypi\r\n",
+      "pycparser                 2.20                     pypi_0    pypi\r\n",
+      "pygments                  2.7.4                    pypi_0    pypi\r\n",
+      "pymc3                     3.11.0                   pypi_0    pypi\r\n",
+      "pyparsing                 2.4.7                    pypi_0    pypi\r\n",
+      "pyrsistent                0.17.3                   pypi_0    pypi\r\n",
+      "python                    3.8.6           h624753d_5_cpython    conda-forge\r\n",
+      "python-dateutil           2.8.1                    pypi_0    pypi\r\n",
+      "pytz                      2021.1                   pypi_0    pypi\r\n",
+      "pyyaml                    5.4.1                    pypi_0    pypi\r\n",
+      "pyzmq                     22.0.2                   pypi_0    pypi\r\n",
+      "readline                  8.1                  h9ed2024_0  \r\n",
+      "regex                     2020.11.13               pypi_0    pypi\r\n",
+      "rpy2                      3.4.2                    pypi_0    pypi\r\n",
+      "scipy                     1.6.0                    pypi_0    pypi\r\n",
+      "seaborn                   0.11.1                   pypi_0    pypi\r\n",
+      "send2trash                1.5.0                    pypi_0    pypi\r\n",
+      "setuptools                52.0.0           py38hecd8cb5_0  \r\n",
+      "six                       1.15.0           py38hecd8cb5_0  \r\n",
+      "sqlite                    3.34.0               h17101e1_0    conda-forge\r\n",
+      "tbb                       2021.1.1                 pypi_0    pypi\r\n",
+      "terminado                 0.9.2                    pypi_0    pypi\r\n",
+      "testpath                  0.4.4                    pypi_0    pypi\r\n",
+      "theano-pymc               1.1.0                    pypi_0    pypi\r\n",
+      "tk                        8.6.10               hb0a8c7a_0  \r\n",
+      "toml                      0.10.2                   pypi_0    pypi\r\n",
+      "tornado                   6.1                      pypi_0    pypi\r\n",
+      "traitlets                 5.0.5                    pypi_0    pypi\r\n",
+      "typed-ast                 1.4.2                    pypi_0    pypi\r\n",
+      "typing-extensions         3.7.4.3                  pypi_0    pypi\r\n",
+      "tzlocal                   2.1                      pypi_0    pypi\r\n",
+      "watermark                 2.1.0                    pypi_0    pypi\r\n",
+      "wcwidth                   0.2.5                    pypi_0    pypi\r\n",
+      "webencodings              0.5.1                    pypi_0    pypi\r\n",
+      "wheel                     0.36.2             pyhd3eb1b0_0  \r\n",
+      "xarray                    0.16.2                   pypi_0    pypi\r\n",
+      "xz                        5.2.5                h1de35cc_0  \r\n",
+      "yapf                      0.30.0                   pypi_0    pypi\r\n",
+      "zlib                      1.2.11               h1de35cc_3  \r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!conda list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "respected-developer",
    "metadata": {},
    "outputs": [],
    "source": []
