--- a/stats_rethinking_ch04_hw02R.ipynb
+++ b/stats_rethinking_ch04_hw02R.ipynb
@@ -398,6 +398,14 @@
    "language": "R",
    "name": "ir"
   },
+  "language_info": {
+   "codemirror_mode": "r",
+   "file_extension": ".r",
+   "mimetype": "text/x-r-source",
+   "name": "R",
+   "pygments_lexer": "r",
+   "version": "4.0.3"
+  },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
    "autoclose": false,
