--- a/stats_rethinking_ch11_hw06.ipynb
+++ b/stats_rethinking_ch11_hw06.ipynb
@@ -13511,19 +13511,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2b11c756",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-03T01:37:52.354821Z",
+     "start_time": "2021-08-03T01:37:52.351961Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "np.random.seed(1)\n",
+    "x = np.random.randn(4, 3, 3, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "10cbd26c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-03T01:43:42.281839Z",
+     "start_time": "2021-08-03T01:43:42.277495Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[[ 1.62434536, -0.61175641],\n",
+       "         [-0.52817175, -1.07296862],\n",
+       "         [ 0.86540763, -2.3015387 ]],\n",
+       "\n",
+       "        [[ 1.74481176, -0.7612069 ],\n",
+       "         [ 0.3190391 , -0.24937038],\n",
+       "         [ 1.46210794, -2.06014071]],\n",
+       "\n",
+       "        [[-0.3224172 , -0.38405435],\n",
+       "         [ 1.13376944, -1.09989127],\n",
+       "         [-0.17242821, -0.87785842]]],\n",
+       "\n",
+       "\n",
+       "       [[[ 0.04221375,  0.58281521],\n",
+       "         [-1.10061918,  1.14472371],\n",
+       "         [ 0.90159072,  0.50249434]],\n",
+       "\n",
+       "        [[ 0.90085595, -0.68372786],\n",
+       "         [-0.12289023, -0.93576943],\n",
+       "         [-0.26788808,  0.53035547]],\n",
+       "\n",
+       "        [[-0.69166075, -0.39675353],\n",
+       "         [-0.6871727 , -0.84520564],\n",
+       "         [-0.67124613, -0.0126646 ]]],\n",
+       "\n",
+       "\n",
+       "       [[[-1.11731035,  0.2344157 ],\n",
+       "         [ 1.65980218,  0.74204416],\n",
+       "         [-0.19183555, -0.88762896]],\n",
+       "\n",
+       "        [[-0.74715829,  1.6924546 ],\n",
+       "         [ 0.05080775, -0.63699565],\n",
+       "         [ 0.19091548,  2.10025514]],\n",
+       "\n",
+       "        [[ 0.12015895,  0.61720311],\n",
+       "         [ 0.30017032, -0.35224985],\n",
+       "         [-1.1425182 , -0.34934272]]],\n",
+       "\n",
+       "\n",
+       "       [[[-0.20889423,  0.58662319],\n",
+       "         [ 0.83898341,  0.93110208],\n",
+       "         [ 0.28558733,  0.88514116]],\n",
+       "\n",
+       "        [[-0.75439794,  1.25286816],\n",
+       "         [ 0.51292982, -0.29809284],\n",
+       "         [ 0.48851815, -0.07557171]],\n",
+       "\n",
+       "        [[ 1.13162939,  1.51981682],\n",
+       "         [ 2.18557541, -1.39649634],\n",
+       "         [-1.44411381, -0.50446586]]]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "f00d07ff",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-03T01:38:07.636889Z",
+     "start_time": "2021-08-03T01:38:07.633652Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 3, 3, 2)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f473ff5d",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "162a97a9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-03T01:42:19.143974Z",
+     "start_time": "2021-08-03T01:42:19.140540Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 5, 5, 4)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.pad(x, pad_width=1).shape"
+   ]
   },
   {
    "cell_type": "code",
