altered readme file

--- a/stats_rethinking_ch14_EOC.ipynb
+++ b/stats_rethinking_ch14_EOC.ipynb
@@ -14,8 +14,8 @@
    "id": "neural-bachelor",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-26T16:05:26.889844Z",
-     "start_time": "2021-08-26T16:05:20.599993Z"
+     "end_time": "2021-09-20T15:08:17.955617Z",
+     "start_time": "2021-09-20T15:08:14.004695Z"
     }
    },
    "outputs": [],
@@ -42,8 +42,8 @@
    "id": "municipal-casino",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-26T16:05:27.827247Z",
-     "start_time": "2021-08-26T16:05:27.705872Z"
+     "end_time": "2021-09-20T15:08:19.175171Z",
+     "start_time": "2021-09-20T15:08:19.045220Z"
     }
    },
    "outputs": [
@@ -91,8 +91,8 @@
    "id": "martial-effect",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-26T16:05:28.155216Z",
-     "start_time": "2021-08-26T16:05:28.151197Z"
+     "end_time": "2021-09-20T15:08:19.437341Z",
+     "start_time": "2021-09-20T15:08:19.432593Z"
     }
    },
    "outputs": [
@@ -134,8 +134,8 @@
    "id": "aa9acb00",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-08-26T16:05:28.845987Z",
-     "start_time": "2021-08-26T16:05:28.840454Z"
+     "end_time": "2021-09-20T15:08:19.888519Z",
+     "start_time": "2021-09-20T15:08:19.882082Z"
     }
    },
    "outputs": [
@@ -172,6 +172,136 @@
     "    x = (x - np.mean(x)) / np.std(x)\n",
     "    return x"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b17f59fa",
+   "metadata": {},
+   "source": [
+    "# Easy problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e873aca6",
+   "metadata": {},
+   "source": [
+    "## 14H1\n",
+    "\n",
+    "**Original equation**\n",
+    "\n",
+    "$$y_i \\sim \\text{Normal}(\\mu_i, \\sigma)$$\n",
+    "\n",
+    "$$\\mu_i = \\alpha_{\\text{GROUP}[i]} + \\beta x_i \\tag{note no \"GROUP\" for the slope}$$\n",
+    "\n",
+    "$$\\alpha_{\\text{GROUP}[i]} \\sim \\text{Normal}(\\alpha, \\sigma_{\\alpha}) \\tag{varying intercept, using an adaptive prior}$$\n",
+    "\n",
+    "$$\\beta \\sim \\text{Normal}(0, 1) \\tag{slope uses only a regularizing prior!}$$\n",
+    "\n",
+    "Hyperpriors follow:\n",
+    "\n",
+    "$$\\alpha \\sim \\text{Normal}(0, 10) $$\n",
+    "\n",
+    "$$\\sigma \\sim \\text{Exponential}(1) $$\n",
+    "\n",
+    "$$\\sigma_{\\alpha} \\sim \\text{Exponential}(1) $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82cf0ac5",
+   "metadata": {},
+   "source": [
+    "In the varying slopes model, instead of having separate lines for the priors for intercepts and slopes, we put them in the same multivariate normal covariance matrix. This allows information sharing between slopes and intercepts. This works through adaptive regularization of individual group intercepts, their slopes, and the correlation among them. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a0501d7",
+   "metadata": {},
+   "source": [
+    "**Equation with varying slopes on the predictor x**\n",
+    "\n",
+    "$$y_i \\sim \\text{Normal}(\\mu_i, \\sigma)$$\n",
+    "\n",
+    "$$\\mu_i = \\alpha_{\\text{GROUP}[i]} + \\beta_{\\text{GROUP}[i]} x_i \\tag{\"GROUP\" added for the slope}$$\n",
+    "\n",
+    "$$\\begin{bmatrix}\\alpha_{\\text{GROUP}} \\\\ \\beta_{\\text{GROUP}} \\end{bmatrix} \\text { ~ MVNormal } \\left( \\begin{bmatrix}\\alpha \\\\ \\beta \\end{bmatrix} , \\text{S} \\right)  \\tag{adaptive prior as joint population of slopes and intercepts} $$\n",
+    "\n",
+    "The covariance matrix **S** is defined here. (Note: The top left of each array is isn't showing up correctly. It should be \\(\\sigma_{\\alpha}\\).)\n",
+    "\n",
+    "$$ \\text{S} = \\left(\\begin{array} \\sigma_{\\alpha} & 0 \\\\ 0 & \\sigma_{\\beta} \\end{array}\\right)  \\text{R} \\left(\\begin{array} \\sigma_{\\alpha} & 0 \\\\ 0 & \\sigma_{\\beta} \\end{array}\\right) \\tag{construct covariance matrix} $$\n",
+    "\n",
+    "R is a correlation matrix with a hyperprior defined below.\n",
+    "\n",
+    "\n",
+    "Hyperpriors down below:\n",
+    "\n",
+    "$$\\alpha \\sim \\text{Normal}(0, 10) $$\n",
+    "\n",
+    "$$\\beta \\sim \\text{Normal}(0, 1)\\tag{added hyperprior}$$\n",
+    "\n",
+    "$$\\sigma \\sim \\text{Exponential}(1) $$\n",
+    "\n",
+    "$$\\sigma_{\\alpha} \\sim \\text{Exponential}(1) $$\n",
+    "\n",
+    "$$\\sigma_{\\beta} \\sim \\text{Exponential}(1) $$\n",
+    "\n",
+    "$$R \\sim \\text{LKJcorr}(2) \\tag{prior for correlation matrix}$$ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b22c49d6",
+   "metadata": {},
+   "source": [
+    "(Note: The top left of this array is isn't showing up correctly. It should be 1.)\n",
+    "\n",
+    "$$ \\text{R} = \\left(\\begin{array} 1 & \\rho \\\\ \\rho & 1 \\end{array}\\right)  \\tag{construct covariance matrix} $$\n",
+    "\n",
+    "The LKJcorr is a weakly informative prior on \\(\\rho\\) that is skeptical of extreme correlations near -1 or 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31783ef8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "656abe47",
+   "metadata": {},
+   "source": [
+    "## 14E2\n",
+    "\n",
+    "Think up a context in which varying intercepts will be positively correlated with varying\n",
+    "slopes. Provide a mechanistic explanation for the correlation."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efc32a87",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "90f742e4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d00173d9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -603,11 +733,11 @@
    "source": [
     "**Model `mfe` equation**\n",
     "\n",
-    "$$C_i \\text{ ~ } \\text{Binomial}(1, p_i)$$\n",
+    "$$C_i \\sim \\text{Binomial}(1, p_i)$$\n",
     "\n",
     "$$\\text{logit}(p_i) = \\alpha_{\\text{district}[i]}$$\n",
     "\n",
-    "$$\\alpha_j \\text{ ~ } \\text{Normal}(0, 1.5) \\tag{regularizing prior}$$"
+    "$$\\alpha_j \\sim \\text{Normal}(0, 1.5) \\tag{regularizing prior}$$"
    ]
   },
   {
@@ -1392,15 +1522,15 @@
    "source": [
     "**Model `mme` equation**\n",
     "\n",
-    "$$C_i \\text{ ~ } \\text{Binomial}(1, p_i)$$\n",
+    "$$C_i \\sim \\text{Binomial}(1, p_i)$$\n",
     "\n",
     "$$\\text{logit}(p_i) = \\alpha_{\\text{district}[i]}$$\n",
     "\n",
-    "$$\\alpha_j \\text{ ~ } \\text{Normal}(\\bar{\\alpha}, \\sigma) \\tag{adaptive prior}$$\n",
+    "$$\\alpha_j \\sim \\text{Normal}(\\bar{\\alpha}, \\sigma) \\tag{adaptive prior}$$\n",
     "\n",
-    "$$\\bar{\\alpha_j} \\text{ ~ } \\text{Normal}(0, 1.5) \\tag{regularizing prior}$$\n",
+    "$$\\bar{\\alpha_j} \\sim \\text{Normal}(0, 1.5) \\tag{regularizing prior}$$\n",
     "\n",
-    "$$\\sigma \\text{ ~ } \\text{Exponential}(1)$$"
+    "$$\\sigma \\sim \\text{Exponential}(1)$$"
    ]
   },
   {
@@ -2656,7 +2786,7 @@
    "source": [
     "**Model `mvse` equation**\n",
     "\n",
-    "$$C_i \\text{ ~ } \\text{Binomial}(1, p_i) \\tag{likelihood}$$\n",
+    "$$C_i \\sim \\text{Binomial}(1, p_i) \\tag{likelihood}$$\n",
     "\n",
     "$$\\text{logit}(p_i) = \\alpha_{\\text{district}[i]} + \\beta_{\\text{district}[i]}U_{[i]} \\tag{linear model with link function}$$\n",
     "\n",
