--- a/SR_notebooks_2022/stats_rethinking_ch03_hw01.ipynb
+++ b/SR_notebooks_2022/stats_rethinking_ch03_hw01.ipynb
@@ -669,17 +669,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 97,
    "id": "a15d90c6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb7f101fe80>"
+       "<matplotlib.legend.Legend at 0x7fb808a920a0>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -700,7 +700,7 @@
     },
     {
      "data": {
-      "application/javascript": "\n            setTimeout(function() {\n                var nbb_cell_id = 95;\n                var nbb_unformatted_code = \"f, ax1 = plt.subplots(1, 1, figsize=(6, 4), sharex=True, sharey=True)\\n\\n# posterior\\nax1.plot(p_grid, posterior, '-o', color=\\\"navy\\\")\\nax1.set(xlabel='p', ylabel='probability', title='Posterior probability of water')\\n\\nax1.axvline(np.percentile(samples, [5.5, 94.5])[0], color='green', linestyle='dashed', label='PI')\\nax1.axvline(np.percentile(samples, [5.5, 94.5])[1], color='green', linestyle='dashed')\\nax1.axvline(az.hdi(samples, hdi_prob=0.89)[0], color='red', linestyle='dashed', label='HDPI')\\nax1.axvline(az.hdi(samples, hdi_prob=0.89)[1], color='red', linestyle='dashed')\\nax1.legend()\";\n                var nbb_formatted_code = \"f, ax1 = plt.subplots(1, 1, figsize=(6, 4), sharex=True, sharey=True)\\n\\n# posterior\\nax1.plot(p_grid, posterior, \\\"-o\\\", color=\\\"navy\\\")\\nax1.set(xlabel=\\\"p\\\", ylabel=\\\"probability\\\", title=\\\"Posterior probability of water\\\")\\n\\nax1.axvline(\\n    np.percentile(samples, [5.5, 94.5])[0],\\n    color=\\\"green\\\",\\n    linestyle=\\\"dashed\\\",\\n    label=\\\"PI\\\",\\n)\\nax1.axvline(np.percentile(samples, [5.5, 94.5])[1], color=\\\"green\\\", linestyle=\\\"dashed\\\")\\nax1.axvline(\\n    az.hdi(samples, hdi_prob=0.89)[0], color=\\\"red\\\", linestyle=\\\"dashed\\\", label=\\\"HDPI\\\"\\n)\\nax1.axvline(az.hdi(samples, hdi_prob=0.89)[1], color=\\\"red\\\", linestyle=\\\"dashed\\\")\\nax1.legend()\";\n                var nbb_cells = Jupyter.notebook.get_cells();\n                for (var i = 0; i < nbb_cells.length; ++i) {\n                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n                             nbb_cells[i].set_text(nbb_formatted_code);\n                        }\n                        break;\n                    }\n                }\n            }, 500);\n            ",
+      "application/javascript": "\n            setTimeout(function() {\n                var nbb_cell_id = 97;\n                var nbb_unformatted_code = \"f, ax1 = plt.subplots(1, 1, figsize=(6, 4), sharex=True, sharey=True)\\n\\n# posterior\\nax1.plot(p_grid, posterior, '-o', color=\\\"navy\\\")\\nax1.set(xlabel='p', ylabel='probability', title='Posterior probability of water')\\n\\nax1.axvline(np.percentile(samples, [5.5, 94.5])[0], color='green', linestyle='dashed', label='PI')\\nax1.axvline(np.percentile(samples, [5.5, 94.5])[1], color='green', linestyle='dashed')\\nax1.axvline(az.hdi(samples, hdi_prob=0.89)[0], color='red', linestyle='dashed', label='HDPI')\\nax1.axvline(az.hdi(samples, hdi_prob=0.89)[1], color='red', linestyle='dashed')\\nax1.legend()\";\n                var nbb_formatted_code = \"f, ax1 = plt.subplots(1, 1, figsize=(6, 4), sharex=True, sharey=True)\\n\\n# posterior\\nax1.plot(p_grid, posterior, \\\"-o\\\", color=\\\"navy\\\")\\nax1.set(xlabel=\\\"p\\\", ylabel=\\\"probability\\\", title=\\\"Posterior probability of water\\\")\\n\\nax1.axvline(\\n    np.percentile(samples, [5.5, 94.5])[0],\\n    color=\\\"green\\\",\\n    linestyle=\\\"dashed\\\",\\n    label=\\\"PI\\\",\\n)\\nax1.axvline(np.percentile(samples, [5.5, 94.5])[1], color=\\\"green\\\", linestyle=\\\"dashed\\\")\\nax1.axvline(\\n    az.hdi(samples, hdi_prob=0.89)[0], color=\\\"red\\\", linestyle=\\\"dashed\\\", label=\\\"HDPI\\\"\\n)\\nax1.axvline(az.hdi(samples, hdi_prob=0.89)[1], color=\\\"red\\\", linestyle=\\\"dashed\\\")\\nax1.legend()\";\n                var nbb_cells = Jupyter.notebook.get_cells();\n                for (var i = 0; i < nbb_cells.length; ++i) {\n                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n                             nbb_cells[i].set_text(nbb_formatted_code);\n                        }\n                        break;\n                    }\n                }\n            }, 500);\n            ",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
