--- a/SR_notebooks_2022/stats_rethinking_hw01.ipynb
+++ b/SR_notebooks_2022/stats_rethinking_hw01.ipynb
@@ -715,9 +715,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The percentile interval, the \"89%\" represents the 5.5 and 94.5 percentile bounds, but it can be misleading because it does not take the shape of the distribution into account.\n",
+    "The percentile interval, the \"89%\" represents the 5.5 and 94.5 percentile bounds. Without visualizations, it can be misleading because it does not take the shape of the distribution into account like in this case.\n",
     "\n",
-    "The HPDI looks \"shifted\" relative to the percentile interval because it does not care about symmetry. the percentile interval gets the middle 89%, meaning that there has to be some values to the left or right. The prior forced the distribution to be 0 when p is <= 0.5 which means the percentile interval can't start there."
+    "Here, the percentile interval is shifted to the right of HPDI. PI requires symmetry but HPDI does not. PI gets the middle 89%, meaning that there has to be the same probability mass to the left and right of the PI bounds. The prior forced the distribution to be 0 when p is <= 0.5 which means the percentile interval can't start there."
    ]
   },
   {
