--- a/SR_notebooks_2022/stats_rethinking_hw01.ipynb
+++ b/SR_notebooks_2022/stats_rethinking_hw01.ipynb
@@ -704,7 +704,7 @@
     "\n",
     "ax1.axvline(np.percentile(samples, [5.5, 94.5])[0], color='navy', linestyle='dashed', label='PI')\n",
     "ax1.axvline(np.percentile(samples, [5.5, 94.5])[1], color='navy', linestyle='dashed')\n",
-    "ax1.axvline(az.hdi(samples, hdi_prob=0.89)[0], color='orange', linestyle='dashed', label='HDPI')\n",
+    "ax1.axvline(az.hdi(samples, hdi_prob=0.89)[0], color='orange', linestyle='dashed', label='HPDI')\n",
     "ax1.axvline(az.hdi(samples, hdi_prob=0.89)[1], color='orange', linestyle='dashed')\n",
     "ax1.legend()\n",
     "\n",
