--- a/SR_notebooks_2022/stats_rethinking_hw02.ipynb
+++ b/SR_notebooks_2022/stats_rethinking_hw02.ipynb
@@ -941,21 +941,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(57.83942874602271, array([51.10403834, 64.39770557]))\n",
-      "(57.83942874602271, array([50.94147438, 64.42851404]))\n",
-      "(57.83942874602271, array([50.86480556, 64.31855821]))\n"
+      "(57.83942874602271, array([51.34951807, 64.81022521]))\n",
+      "(57.83942874602271, array([50.39689986, 64.48538557]))\n",
+      "(57.83942874602271, array([51.24739796, 64.62344912]))\n"
      ]
     },
     {
      "data": {
-      "application/javascript": "\n            setTimeout(function() {\n                var nbb_cell_id = 58;\n                var nbb_unformatted_code = \"for h in [140, 140, 140]:\\n    print(predict_weight(hi))\";\n                var nbb_formatted_code = \"for h in [140, 140, 140]:\\n    print(predict_weight(hi))\";\n                var nbb_cells = Jupyter.notebook.get_cells();\n                for (var i = 0; i < nbb_cells.length; ++i) {\n                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n                             nbb_cells[i].set_text(nbb_formatted_code);\n                        }\n                        break;\n                    }\n                }\n            }, 500);\n            ",
+      "application/javascript": "\n            setTimeout(function() {\n                var nbb_cell_id = 59;\n                var nbb_unformatted_code = \"for h in [140, 140, 140]:\\n    print(predict_weight(hi))\\n    pred_hi = predict_weight(hi)\";\n                var nbb_formatted_code = \"for h in [140, 140, 140]:\\n    print(predict_weight(hi))\\n    pred_hi = predict_weight(hi)\";\n                var nbb_cells = Jupyter.notebook.get_cells();\n                for (var i = 0; i < nbb_cells.length; ++i) {\n                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n                             nbb_cells[i].set_text(nbb_formatted_code);\n                        }\n                        break;\n                    }\n                }\n            }, 500);\n            ",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -966,7 +966,8 @@
    ],
    "source": [
     "for h in [140, 140, 140]:\n",
-    "    print(predict_weight(hi))"
+    "    print(predict_weight(hi))\n",
+    "    pred_hi = predict_weight(hi)"
    ]
   },
   {
