add hw05, blog entry

--- a/SR_notebooks_2022/stats_rethinking_hw04.ipynb
+++ b/SR_notebooks_2022/stats_rethinking_hw04.ipynb
@@ -4943,12 +4943,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Model 3e, student t regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Auto-assigning NUTS sampler...\n",
+      "INFO:pymc3:Auto-assigning NUTS sampler...\n",
+      "Initializing NUTS using jitter+adapt_diag...\n",
+      "INFO:pymc3:Initializing NUTS using jitter+adapt_diag...\n",
+      "Multiprocess sampling (4 chains in 4 jobs)\n",
+      "INFO:pymc3:Multiprocess sampling (4 chains in 4 jobs)\n",
+      "NUTS: [sigma, bT, a]\n",
+      "INFO:pymc3:NUTS: [sigma, bT, a]\n",
+      "Sampling 4 chains for 1_000 tune and 1_000 draw iterations (4_000 + 4_000 draws total) took 19 seconds.\n",
+      "INFO:pymc3:Sampling 4 chains for 1_000 tune and 1_000 draw iterations (4_000 + 4_000 draws total) took 19 seconds.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": "\n            setTimeout(function() {\n                var nbb_cell_id = 88;\n                var nbb_unformatted_code = \"with pm.Model() as mq3e:\\n\\n    # priors\\n    a = pm.Normal(\\\"a\\\", 100, 10)\\n    bT = pm.Normal(\\\"bT\\\", 5, 3)\\n    sigma = pm.Exponential(\\\"sigma\\\", 2)\\n\\n    # linear model\\n    mu = a + bT*df_cb3['temp']\\n\\n    # likelihood\\n    D = pm.StudentT(\\\"D\\\", nu=2, mu=mu, sigma=sigma, observed=df_cb3['doy'])\\n    \\n    # posterior\\n    idata_mq3e = pm.sample(draws=1000, tune=1000, return_inferencedata=True, progressbar=False)\";\n                var nbb_formatted_code = \"with pm.Model() as mq3e:\\n\\n    # priors\\n    a = pm.Normal(\\\"a\\\", 100, 10)\\n    bT = pm.Normal(\\\"bT\\\", 5, 3)\\n    sigma = pm.Exponential(\\\"sigma\\\", 2)\\n\\n    # linear model\\n    mu = a + bT * df_cb3[\\\"temp\\\"]\\n\\n    # likelihood\\n    D = pm.StudentT(\\\"D\\\", nu=2, mu=mu, sigma=sigma, observed=df_cb3[\\\"doy\\\"])\\n\\n    # posterior\\n    idata_mq3e = pm.sample(\\n        draws=1000, tune=1000, return_inferencedata=True, progressbar=False\\n    )\";\n                var nbb_cells = Jupyter.notebook.get_cells();\n                for (var i = 0; i < nbb_cells.length; ++i) {\n                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n                             nbb_cells[i].set_text(nbb_formatted_code);\n                        }\n                        break;\n                    }\n                }\n            }, 500);\n            ",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "with pm.Model() as mq3e:\n",
+    "\n",
+    "    # priors\n",
+    "    a = pm.Normal(\"a\", 100, 10)\n",
+    "    bT = pm.Normal(\"bT\", 5, 3)\n",
+    "    sigma = pm.Exponential(\"sigma\", 2)\n",
+    "\n",
+    "    # linear model\n",
+    "    mu = a + bT*df_cb3['temp']\n",
+    "\n",
+    "    # likelihood\n",
+    "    D = pm.StudentT(\"D\", nu=2, mu=mu, sigma=sigma, observed=df_cb3['doy'])\n",
+    "    \n",
+    "    # posterior\n",
+    "    idata_mq3e = pm.sample(draws=1000, tune=1000, return_inferencedata=True, progressbar=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Model comparison"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -5001,7 +5072,7 @@
        "      <td>-2518.095658</td>\n",
        "      <td>2.852920</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>8.910633e-01</td>\n",
+       "      <td>0.891072</td>\n",
        "      <td>20.610757</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>False</td>\n",
@@ -5013,7 +5084,7 @@
        "      <td>-2527.535532</td>\n",
        "      <td>16.960362</td>\n",
        "      <td>9.439874</td>\n",
-       "      <td>2.391993e-15</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>20.391880</td>\n",
        "      <td>3.371669</td>\n",
        "      <td>False</td>\n",
@@ -5025,7 +5096,7 @@
        "      <td>-2529.697232</td>\n",
        "      <td>29.894353</td>\n",
        "      <td>11.601574</td>\n",
-       "      <td>1.089367e-01</td>\n",
+       "      <td>0.108928</td>\n",
        "      <td>20.506260</td>\n",
        "      <td>5.401005</td>\n",
        "      <td>True</td>\n",
@@ -5037,9 +5108,21 @@
        "      <td>-2537.563112</td>\n",
        "      <td>15.701213</td>\n",
        "      <td>19.467454</td>\n",
-       "      <td>8.881784e-16</td>\n",
+       "      <td>0.000000</td>\n",
        "      <td>20.505712</td>\n",
        "      <td>5.686782</td>\n",
+       "      <td>False</td>\n",
+       "      <td>log</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>student t</th>\n",
+       "      <td>4</td>\n",
+       "      <td>-2568.920157</td>\n",
+       "      <td>3.059190</td>\n",
+       "      <td>50.824499</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>21.872375</td>\n",
+       "      <td>7.115093</td>\n",
        "      <td>False</td>\n",
        "      <td>log</td>\n",
        "    </tr>\n",
@@ -5048,26 +5131,28 @@
        "</div>"
       ],
       "text/plain": [
-       "                        rank         waic     p_waic     d_waic        weight  \\\n",
-       "temp only                  0 -2518.095658   2.852920   0.000000  8.910633e-01   \n",
-       "spline (year) and temp     1 -2527.535532  16.960362   9.439874  2.391993e-15   \n",
-       "spline (temp) and temp     2 -2529.697232  29.894353  11.601574  1.089367e-01   \n",
-       "year (spline) only         3 -2537.563112  15.701213  19.467454  8.881784e-16   \n",
+       "                        rank         waic     p_waic     d_waic    weight  \\\n",
+       "temp only                  0 -2518.095658   2.852920   0.000000  0.891072   \n",
+       "spline (year) and temp     1 -2527.535532  16.960362   9.439874  0.000000   \n",
+       "spline (temp) and temp     2 -2529.697232  29.894353  11.601574  0.108928   \n",
+       "year (spline) only         3 -2537.563112  15.701213  19.467454  0.000000   \n",
+       "student t                  4 -2568.920157   3.059190  50.824499  0.000000   \n",
        "\n",
        "                               se       dse  warning waic_scale  \n",
        "temp only               20.610757  0.000000    False        log  \n",
        "spline (year) and temp  20.391880  3.371669    False        log  \n",
        "spline (temp) and temp  20.506260  5.401005     True        log  \n",
-       "year (spline) only      20.505712  5.686782    False        log  "
+       "year (spline) only      20.505712  5.686782    False        log  \n",
+       "student t               21.872375  7.115093    False        log  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
-      "application/javascript": "\n            setTimeout(function() {\n                var nbb_cell_id = 74;\n                var nbb_unformatted_code = \"az.compare({\\\"year (spline) only\\\": idata_mq3a, \\\"temp only\\\":idata_mq3b , \\\"spline (year) and temp\\\":idata_mq3c, \\\"spline (temp) and temp\\\":idata_mq3d}, ic='waic')\";\n                var nbb_formatted_code = \"az.compare(\\n    {\\n        \\\"year (spline) only\\\": idata_mq3a,\\n        \\\"temp only\\\": idata_mq3b,\\n        \\\"spline (year) and temp\\\": idata_mq3c,\\n        \\\"spline (temp) and temp\\\": idata_mq3d,\\n    },\\n    ic=\\\"waic\\\",\\n)\";\n                var nbb_cells = Jupyter.notebook.get_cells();\n                for (var i = 0; i < nbb_cells.length; ++i) {\n                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n                             nbb_cells[i].set_text(nbb_formatted_code);\n                        }\n                        break;\n                    }\n                }\n            }, 500);\n            ",
+      "application/javascript": "\n            setTimeout(function() {\n                var nbb_cell_id = 90;\n                var nbb_unformatted_code = \"az.compare({\\\"year (spline) only\\\": idata_mq3a, \\\"temp only\\\":idata_mq3b , \\\"spline (year) and temp\\\":idata_mq3c, \\\"spline (temp) and temp\\\":idata_mq3d, \\\"student t\\\":idata_mq3e}, ic='waic')\";\n                var nbb_formatted_code = \"az.compare(\\n    {\\n        \\\"year (spline) only\\\": idata_mq3a,\\n        \\\"temp only\\\": idata_mq3b,\\n        \\\"spline (year) and temp\\\": idata_mq3c,\\n        \\\"spline (temp) and temp\\\": idata_mq3d,\\n        \\\"student t\\\": idata_mq3e,\\n    },\\n    ic=\\\"waic\\\",\\n)\";\n                var nbb_cells = Jupyter.notebook.get_cells();\n                for (var i = 0; i < nbb_cells.length; ++i) {\n                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n                             nbb_cells[i].set_text(nbb_formatted_code);\n                        }\n                        break;\n                    }\n                }\n            }, 500);\n            ",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -5077,7 +5162,7 @@
     }
    ],
    "source": [
-    "az.compare({\"year (spline) only\": idata_mq3a, \"temp only\":idata_mq3b , \"spline (year) and temp\":idata_mq3c, \"spline (temp) and temp\":idata_mq3d}, ic='waic')"
+    "az.compare({\"year (spline) only\": idata_mq3a, \"temp only\":idata_mq3b , \"spline (year) and temp\":idata_mq3c, \"spline (temp) and temp\":idata_mq3d, \"student t\":idata_mq3e}, ic='waic')"
    ]
   },
   {
