iterate on LKJcorr post, prep for pystan

--- a/blog_entries/stats_rethinking_noncentered_priors_v0.ipynb
+++ b/blog_entries/stats_rethinking_noncentered_priors_v0.ipynb
@@ -22,7 +22,8 @@
     "This is equivalent to \n",
     "\n",
     "$$ \\nu \\sim \\text{Normal}(0, 3) $$\n",
-    "$$ x \\sim \\text{Normal}(0, \\text{exp}(\\nu)) $$\n",
+    "$$ z \\sim \\text{Normal}(0, \\text{exp}(\\nu)) $$\n",
+    "$$ x = z \\times \\text{exp}(\\nu)) $$\n",
     "\n",
     "In an online discussion forum, we shared experiences with these kinds of parameterizations since it was around the same time [lecture 13 of Statistical Rethinking](https://www.youtube.com/watch?v=n2aJYtuGu54&list=PLDcUM9US4XdMROZ57-OIRtIK0aOynbgZN&index=13) was released. In the [divergent transition section](https://www.youtube.com/watch?v=n2aJYtuGu54&list=PLDcUM9US4XdMROZ57-OIRtIK0aOynbgZN&index=13&t=2319s), I noticed that the centered parameterization had a distribution that looked somewhat multivariate Gaussian. Would there be a difference in sampling efficiency between centered and non-centered parameterizations?\n",
     "\n",
