--- a/SR_notebooks_2021/stats_rethinking_ch15_hw10.ipynb
+++ b/SR_notebooks_2021/stats_rethinking_ch15_hw10.ipynb
@@ -5020,7 +5020,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.11 ('sdoh_text2')",
    "language": "python",
    "name": "python3"
   },
@@ -5034,7 +5034,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.11"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
@@ -5100,6 +5100,11 @@
     "_Feature"
    ],
    "window_display": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "de5cbdcc76c98b93c5b7f180fb4e26c4c9428508be3211495db9b182446cc4e4"
+   }
   }
  },
  "nbformat": 4,
