draft of mixed effects post

--- a/blog_entries/mixed_effects_freqvsbayes_cafes.ipynb
+++ b/blog_entries/mixed_effects_freqvsbayes_cafes.ipynb
@@ -321,6 +321,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualize data\n",
+    "\n",
+    "Let's plot the raw data and see how the effect of afternoon influences wait time."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
@@ -355,14 +364,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have the dataset, we can run the two models, one with `lmer` and one with `pymc`. Here are the equations that these packages run."
+    "# Common definitions and examples of mixed effects modeling"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Equation form 1: both fixed and varying effects terms in linear model**\n",
+    "**Equation set 1: both fixed and varying effects terms in linear model**\n",
     "\n",
     "[Galecki and Burzykowski](https://link.springer.com/book/10.1007/978-1-4614-3900-4) describe a linear mixed model with equation 1. Various sources (including [Wikipedia](https://en.wikipedia.org/wiki/Mixed_model)) have something similar. \n",
     "\n",
@@ -381,14 +390,16 @@
     "\n",
     "$$ w_i = (\\alpha + \\beta \\times A_i) + (\\alpha_{\\text{cafe}[i]} + \\beta_{\\text{cafe}[i]} \\times A_{\\text{cafe}[i]}) + \\epsilon_i \\tag{2} $$\n",
     "\n",
-    "In this equation, I have segmented the fixed and random effects with parentheses. It might be easier to appreciate what's going on in equation 2. A cafe's random effects intercept can be thought of as an offset from the population intercept. The same logic of an offset can be applied to its slope."
+    "In this equation, I have segmented the fixed and random effects with parentheses. It might be easier to appreciate what's going on in equation 2. A cafe's random effects intercept can be thought of as an offset from the population intercept. The same logic of an offset can be applied to its slope.\n",
+    "\n",
+    "IF THE ABOVE IS CORRECT, I'M STILL HAVING TROUBLE DRAWING A CONNECTION FROM THE FIXED EFFECTS TERMS IN EQUATION 2 TO THE SAME ALPHA AND BETA IN THE MVN OF EQUATION 6 BELOW."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Equation form 2: fixed effects is represented as an adaptive prior, varying effects is in the linear model**\n",
+    "**Equation set 2: fixed effects is represented as an adaptive prior, varying effects is in the linear model**\n",
     "\n",
     "We can re-write the above equations in a Bayesian way but in this example I will write the equations where the fixed effects is shown as an adaptive prior. These set of equations look like a beast, but to be honest, they're more intuitive to me, probably because I learned this approach initially.\n",
     "\n",
@@ -398,140 +409,31 @@
     "\n",
     "Equation 3 is stating how wait time is normally distributed around $\\mu$ and $\\sigma$. By making $w_i$ stochastic instead of deterministic (using a ~ instead of =), the $\\sigma$ replaces $\\epsilon_i$. In equation 5, the prior for $\\sigma$ is exponentially distributed and paramaterized with 1. The expected value parameter $\\mu$ comes from the linear model in equation 4. You can see the similarities with equation 2 above. I think you can think of these $\\alpha_i$ and $\\beta_i$ terms as already incorporating the information from the fixed and random effects simultaneously.\n",
     "\n",
-    "$$ \\begin{bmatrix}\\alpha_j \\\\ \\beta_j \\end{bmatrix} \\sim \\text{MVNormal} \\left( \\begin{bmatrix}{\\alpha} \\\\ {\\beta} \\end{bmatrix} , \\textbf{S} \\right)    \\tag{5}$$\n",
+    "$$ \\begin{bmatrix}\\alpha_j \\\\ \\beta_j \\end{bmatrix} \\sim \\text{MVNormal} \\left( \\begin{bmatrix}{\\alpha} \\\\ {\\beta} \\end{bmatrix} , \\textbf{S} \\right)    \\tag{6}$$\n",
     "\n",
     "The $\\alpha_i$ and $\\beta_i$ terms come from sampling of a multivariate normal distribution as shown in equation 5. On the right side, the two-dimensional normal distribution's expected values are $\\alpha$ and $\\beta$.\n",
     "\n",
-    "$$ \\textbf{S} = \\begin{pmatrix} \\sigma_{\\alpha} & 0 \\\\ 0 & \\sigma_{\\beta} \\end{pmatrix} \\textbf{R} \\begin{pmatrix} \\sigma_{\\alpha} & 0 \\\\ 0 & \\sigma_{\\beta} \\end{pmatrix}  \\tag{6}$$\n",
-    "$$ \\bar{\\alpha} \\sim \\text{Normal}(5, 2) \\tag{7}$$  \n",
-    "$$ \\bar{\\beta} \\sim \\text{Normal}(-1, 0.5)  \\tag{8}$$  \n",
-    "$$ \\sigma, \\sigma_{\\alpha}, \\sigma_{\\beta} \\sim \\text{Exp}(1) \\tag{9}$$\n",
-    "$$ \\textbf{R} \\sim \\text{LKJCorr}(2) \\tag{10}$$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    # needs to be fixed in repo sd > sigma\n",
-    "    a_bar = pm.Normal(\"a_bar\", mu=5, sigma=2.0)  # prior for average intercept\n",
-    "    b_bar = pm.Normal(\"b_bar\", mu=-1, sigma=0.5)  # prior for average slope"
+    "$$ \\textbf{S} = \\begin{pmatrix} \\sigma_{\\alpha} & 0 \\\\ 0 & \\sigma_{\\beta} \\end{pmatrix} \\textbf{R} \\begin{pmatrix} \\sigma_{\\alpha} & 0 \\\\ 0 & \\sigma_{\\beta} \\end{pmatrix}  \\tag{7}$$\n",
+    "$$ \\bar{\\alpha} \\sim \\text{Normal}(5, 2) \\tag{8}$$  \n",
+    "$$ \\bar{\\beta} \\sim \\text{Normal}(-1, 0.5)  \\tag{9}$$  \n",
+    "$$ \\sigma, \\sigma_{\\alpha}, \\sigma_{\\beta} \\sim \\text{Exp}(1) \\tag{10}$$\n",
+    "$$ \\textbf{R} \\sim \\text{LKJCorr}(2) \\tag{11}$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualize data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Common definitions and examples of mixed effects modeling"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The first equation has an explicit fixed effects term and varying effects term in the linear model (second line). The fixed and varying effects are the first and second parenthetical blocks, respectively.\n",
+    "To recap, the first equation set has an explicit fixed effects term and varying effects term in the linear model. In the second equation, the linear model is already \"mixed\". It contains both the fixed and varying effects terms implicitly. The fixed effects estimates can be seen in equation 5.\n",
     "\n",
-    "In the second equation, the linear model is already \"mixed\". It contains both the fixed and varying effects terms implicitly. The fixed effects estimates can be seen in the third line."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cafe</th>\n",
-       "      <th>afternoon</th>\n",
-       "      <th>wait</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.101138</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.615758</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.604023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.140369</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.903201</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   cafe  afternoon      wait\n",
-       "0     0          0  3.101138\n",
-       "1     0          1  2.615758\n",
-       "2     0          0  2.604023\n",
-       "3     0          1  2.140369\n",
-       "4     0          0  3.903201"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_cafes.head()"
+    "Now that we have the dataset, we can run the two models, one with `lmer` and one with `pymc`. Here are the equations that these packages run."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Equation form 1 (frequentist)"
+    "# Running equation set 1 with `lmer` (frequentist)"
    ]
   },
   {
@@ -583,7 +485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can we get the partial pooling results from the `lmer` output and see how it compares with the unpooled estimates?"
+    "Can we get the partial pooling results from the `lmer` output and see how it compares with the unpooled estimates? Let's export it for use later."
    ]
   },
   {
@@ -1072,7 +974,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Equation form 2 (Bayesian)"
+    "# Running equation set 2 with `pymc` (Bayesian)"
    ]
   },
   {
